# ripple

./: LICENSE-HW.txt  LICENSE.SW.txt  README.md
binary/: Cargo.toml
binary/src/: generated.rs
binary/src/mpl115a2/: data_structs.rs  helpers.rs  mod.rs
binary/src/sh1106/: helpers.rs  mod.rs
binary/src/ws2812/: helpers.rs  mod.rs
design/: box.scad  box.stl  faceplate_test.stl  temp_display_panel.scad  temp_display_panel.stl
pcb/: breakout_board.kicad_pro  breakout_board.kicad_sch  design-block-lib-table  fp-info-cache  ripple.csv  ripple.kicad_pcb  ripple.kicad_prl  ripple.kicad_pro  ripple.kicad_sch  sym-lib-table  usb_batt.kicad_sch  ~ripple.kicad_pcb.lck
pcb/AHT20/: PSON100P300X300X110-6N.kicad_mod
pcb/MPL115A2/: LGA8.kicad_mod  MPL115A2.kicad_sym
pcb/SS-52400-002/: BELFUSE_SS-52400-002.kicad_mod
pcb/parts/: SOT95P240X105-3N.kicad_mod  SW3_JSX08001SAQNL_CNK.kicad_mod  SW_SKRPACE010.kicad_mod  gh_qrcode.kicad_mod  miku-leek.kicad_mod
pcb/production/: bom.csv  designators.csv  netlist.ipc  positions.csv
src/: data_structs.rs  generated.rs  helpers.rs  main.rs
src/dht11/: mod.rs
src/mpl115a2/: macros.rs
src/sh1106/: data_structs.rs
src/ws2812/: pio.rs
