[package]
name = "temperature-display"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "temperature-display"
test = false

[dependencies]
embassy-rp = { version = "0.4.0", features = ["defmt", "rp2040", "time-driver", "critical-section-impl", "rom-v2-intrinsics"] }
embassy-executor = { version = "0.7.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-sync = { version = "0.6.2", features = ["defmt"] }

defmt = "1.0"
defmt-rtt = "1.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }
fixed = "1.29.0"

cortex-m = { version = "0.7", features = ["inline-asm"] }
cortex-m-rt = "0.7"
critical-section = "1.1"
heapless = "0.8.0"
assign-resources = "0.4"
embedded-graphics = { version = "0.8.1", features = ["defmt"] }

sh1106-driver = { package = "sh1106", version = "0.5.0", features = ["embedded-graphics-core"] }
embedded-iconoir = { version = "0.2.3", features = ["12px", "16px", "24px"] }
smart-leds = "0.4.0"

[profile.release]
debug = 2
lto = true
opt-level = 'z'
